crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__directive_if_else_next_line.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<div>\n    @if a {\n        <p>a</p>\n    }\n    @else {\n        <p>b</p>\n    }\n</div>\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 8,
            column: 7,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 5,
                        },
                    },
                    value: Tag(
                        "div",
                    ),
                },
                attrs: [],
                children: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 5,
                            },
                            end: Position {
                                line: 7,
                                column: 6,
                            },
                        },
                        value: If {
                            branches: [
                                ChildIfBranch {
                                    condition: Located {
                                        region: Region {
                                            start: Position {
                                                line: 2,
                                                column: 9,
                                            },
                                            end: Position {
                                                line: 2,
                                                column: 10,
                                            },
                                        },
                                        value: Var(
                                            "a",
                                        ),
                                    },
                                    body: Located {
                                        region: Region {
                                            start: Position {
                                                line: 2,
                                                column: 11,
                                            },
                                            end: Position {
                                                line: 4,
                                                column: 6,
                                            },
                                        },
                                        value: ChildBlock {
                                            items: [
                                                Child(
                                                    Located {
                                                        region: Region {
                                                            start: Position {
                                                                line: 3,
                                                                column: 9,
                                                            },
                                                            end: Position {
                                                                line: 3,
                                                                column: 17,
                                                            },
                                                        },
                                                        value: Element(
                                                            Element {
                                                                name: Located {
                                                                    region: Region {
                                                                        start: Position {
                                                                            line: 3,
                                                                            column: 10,
                                                                        },
                                                                        end: Position {
                                                                            line: 3,
                                                                            column: 11,
                                                                        },
                                                                    },
                                                                    value: Tag(
                                                                        "p",
                                                                    ),
                                                                },
                                                                attrs: [],
                                                                children: [
                                                                    Located {
                                                                        region: Region {
                                                                            start: Position {
                                                                                line: 3,
                                                                                column: 12,
                                                                            },
                                                                            end: Position {
                                                                                line: 3,
                                                                                column: 13,
                                                                            },
                                                                        },
                                                                        value: Text(
                                                                            "a",
                                                                        ),
                                                                    },
                                                                ],
                                                                self_closing: false,
                                                            },
                                                        ),
                                                    },
                                                ),
                                            ],
                                        },
                                    },
                                },
                            ],
                            final_else: Some(
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 5,
                                            column: 11,
                                        },
                                        end: Position {
                                            line: 7,
                                            column: 6,
                                        },
                                    },
                                    value: ChildBlock {
                                        items: [
                                            Child(
                                                Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 6,
                                                            column: 9,
                                                        },
                                                        end: Position {
                                                            line: 6,
                                                            column: 17,
                                                        },
                                                    },
                                                    value: Element(
                                                        Element {
                                                            name: Located {
                                                                region: Region {
                                                                    start: Position {
                                                                        line: 6,
                                                                        column: 10,
                                                                    },
                                                                    end: Position {
                                                                        line: 6,
                                                                        column: 11,
                                                                    },
                                                                },
                                                                value: Tag(
                                                                    "p",
                                                                ),
                                                            },
                                                            attrs: [],
                                                            children: [
                                                                Located {
                                                                    region: Region {
                                                                        start: Position {
                                                                            line: 6,
                                                                            column: 12,
                                                                        },
                                                                        end: Position {
                                                                            line: 6,
                                                                            column: 13,
                                                                        },
                                                                    },
                                                                    value: Text(
                                                                        "b",
                                                                    ),
                                                                },
                                                            ],
                                                            self_closing: false,
                                                        },
                                                    ),
                                                },
                                            ),
                                        ],
                                    },
                                },
                            ),
                        },
                    },
                ],
                self_closing: false,
            },
        ),
    ),
}
