crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__directive_if_empty_body.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<div>@if a {}</div>"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 20,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 5,
                        },
                    },
                    value: Tag(
                        "div",
                    ),
                },
                attrs: [],
                children: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 6,
                            },
                            end: Position {
                                line: 1,
                                column: 14,
                            },
                        },
                        value: If {
                            branches: [
                                ChildIfBranch {
                                    condition: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 10,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 11,
                                            },
                                        },
                                        value: Var(
                                            "a",
                                        ),
                                    },
                                    body: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 12,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 14,
                                            },
                                        },
                                        value: ChildBlock {
                                            items: [],
                                        },
                                    },
                                },
                            ],
                            final_else: None,
                        },
                    },
                ],
                self_closing: false,
            },
        ),
    ),
}
