crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__directive_if_text_body.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<p>@if a { yes } @else { no }</p>"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 34,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 3,
                        },
                    },
                    value: Tag(
                        "p",
                    ),
                },
                attrs: [],
                children: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 4,
                            },
                            end: Position {
                                line: 1,
                                column: 30,
                            },
                        },
                        value: If {
                            branches: [
                                ChildIfBranch {
                                    condition: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 8,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 9,
                                            },
                                        },
                                        value: Var(
                                            "a",
                                        ),
                                    },
                                    body: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 10,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 17,
                                            },
                                        },
                                        value: ChildBlock {
                                            items: [
                                                Child(
                                                    Located {
                                                        region: Region {
                                                            start: Position {
                                                                line: 1,
                                                                column: 11,
                                                            },
                                                            end: Position {
                                                                line: 1,
                                                                column: 16,
                                                            },
                                                        },
                                                        value: Text(
                                                            " yes ",
                                                        ),
                                                    },
                                                ),
                                            ],
                                        },
                                    },
                                },
                            ],
                            final_else: Some(
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 24,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 30,
                                        },
                                    },
                                    value: ChildBlock {
                                        items: [
                                            Child(
                                                Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 1,
                                                            column: 25,
                                                        },
                                                        end: Position {
                                                            line: 1,
                                                            column: 29,
                                                        },
                                                    },
                                                    value: Text(
                                                        " no ",
                                                    ),
                                                },
                                            ),
                                        ],
                                    },
                                },
                            ),
                        },
                    },
                ],
                self_closing: false,
            },
        ),
    ),
}
